--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/Smith.jpg" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="theme-color" content="#004d4d" />
+    <meta name="description" content="Smith Teilor - Taller de Costura y Confección de Alta Calidad" />
+    
+    <title>Smith Teilor - Taller de Costura</title>
   </head>
   <body>
     <div id="app"></div>
