cambiar nombre del taller smith teilor a teilor smith

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,9 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     <meta name="theme-color" content="#004d4d" />
-    <meta name="description" content="Smith Teilor - Taller de Costura y Confección de Alta Calidad" />
+    <meta name="description" content=" Teilor Smith - Taller de Costura y Confección de Alta Calidad" />
     
-    <title>Smith Teilor - Taller de Costura</title>
+    <title> Teilor Smith - Taller de Costura</title>
   </head>
   <body>
     <div id="app"></div>
